--- a/css/style.css
+++ b/css/style.css
@@ -380,3 +380,62 @@ p {
     width: 100%;
     height: 0.125rem;
 }
+
+/* footer */
+.footer-wrapper .new-letter {
+    width: 100%;
+    height: 100%;
+    background: url(../images/subscribe-bg.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-size: center center;
+    padding: 9.375rem 0;
+}
+.footer-wrapper input{
+    line-height: 3rem;
+    padding: 0 1.5632rem;
+    border: .125rem solid var(--bg-white);
+    background: transparent;
+    font-weight: 400;
+    border-radius: .3125rem;
+    color: var(--text-white);
+}
+.footer-wrapper .form-control:focus{
+    color: var(--text-white);
+    background: transparent;
+    border-color: var(--bg-light);
+    outline: 0;
+    box-shadow: none;
+}
+.footer-wrapper .form-control::placeholder{
+    color: var(--text-white);
+}
+
+
+/* footer 2 */
+.footer-wrapper .footer-logo img{
+    width: 12.5rem;
+    height: auto;
+}
+.footer-wrapper .social-icons li{
+    margin: .375rem;
+}
+.footer-wrapper .social-icons li a{
+    line-height: 1.875rem;
+    font-size: 1.5625rem;
+    display: inline-block;
+    color: var(--text-black);
+    text-align: center;
+    margin: 0 .625rem;
+}
+.footer-wrapper .social-icons li a:hover{
+    color: var(--primary-color);
+}
+.footer-wrapper .footer-text{
+    font-size: .6875rem;
+    line-height: 1.25rem;
+    font-weight: 600;
+}
+.footer-wrapper .footer-text a{
+    color: var(--primary-color);
+}
